--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
-/* .App {
+.App {
+  margin: auto;
   text-align: center;
-} */
-div{
-  min-width: 200px;
 }
+.logout-button{
+  margin: auto;
+  border-radius: 20px;
+}
+
 
 .App-link {
   color: #09d3ac;
