--- a/src/components/dashboard/profile/Profile.css
+++ b/src/components/dashboard/profile/Profile.css
@@ -1,26 +1,23 @@
 .profile-div {
   margin: auto;
-  margin-bottom: 10px;
-  padding: 20px 10px 10px 10px;
-  border: 0.5px solid hsla(214, 100%, 11%, 0.13);
-  background-color: #3a3d572a;
+  margin-top: 20px;
+  padding: 20px;
   text-align: left;
   border-radius: 10px;
-  max-width: 100px;
+  min-width: 200px;
+  max-width: 400px;
 }
-
-
-.settings button{
-  background-color: rgb(0, 89, 255);
-  color: #fff;
-  font-size: small;
+.card-div {
   padding: 10px;
-  border: none;
-  cursor: pointer;
+  padding-top: 20px;
+}
+hr {
   margin-top: 20px;
-  margin-bottom: 0;
+  margin-bottom: 20px;
+}
+.settings{
+  float: right;
+  margin: 10px;
   width: fit-content;
   height: fit-content;
-  border-collapse: separate;
-  border-radius: 5px;
 }
