--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
-html{
-  margin: auto;
+html {
+margin: auto;
+height: 100%;
 }
 
 body {
-  margin: 10px;
+  margin: 0;
+  height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
