--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,13 @@
 html {
-margin: auto;
-height: 100%;
+  margin: auto;
+  height: -webkit-fill-available;
+  background-color: rgba(25, 35, 46, 1);
+
 }
 
 body {
-  margin: 0;
-  height: 100%;
+  margin: auto;
+  height: fit-content;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
