--- a/src/components/main/dashboard/Profile.css
+++ b/src/components/main/dashboard/Profile.css
@@ -3,11 +3,10 @@
   position: relative;
   text-align: center;
   border-radius: 10px;
-  min-width: 200px;
-  max-width: 500px;
+  width: 90vmin;
+  min-width: 250px;
 }
 .card-div {
-  margin-top: 10px;
   padding: 20px;
   padding-top: 20px;
 }
