--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 html {
-  margin: auto;;
+  margin: auto;
   background-color: rgba(25, 35, 46, 1);
 }
 
@@ -15,4 +15,18 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+::-webkit-scrollbar {
+  width: 3px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10px);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(10px);
+  outline: 1px solid slategrey;
 }
