--- a/src/index.css
+++ b/src/index.css
@@ -28,5 +28,5 @@ code {
 ::-webkit-scrollbar-thumb {
   background-color: rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(10px);
-  outline: 1px solid slategrey;
+  /* outline: 1px solid slategrey; */
 }
