saved viewState to sessionStorage

--- a/src/App.css
+++ b/src/App.css
@@ -5,30 +5,30 @@ div.MuiBox-root {
 /* div.makeStyles-root-173 {
   background-color: rgba(22, 31, 41);
 } */
-#customized-menu{
-  left: 0
+#customized-menu {
+  left: 0;
 }
 
 .logout-button {
   margin: auto;
 }
 input:-webkit-autofill {
-  border: 1px solid #009BC2;
-  -webkit-text-fill-color: #009BC2;
-  box-shadow:#7196BD;
+  border: 1px solid #009bc2;
+  -webkit-text-fill-color: #009bc2;
+  box-shadow: #7196bd;
   transition: background-color 5000s ease-in-out 0s;
 }
 
-
-label{
+label {
   color: white;
-  COLOR:#202a35
+  color: #202a35;
 }
 
-.MuiTab-textColorPrimary{
+.MuiTab-textColorPrimary {
   color: white;
 }
-td.MuiTableCell-body, th.MuiTableCell-body{
+td.MuiTableCell-body,
+th.MuiTableCell-body {
   padding: 0px;
   background-color: transparent;
   backdrop-filter: blur(10px);
@@ -37,19 +37,23 @@ td.MuiTableCell-body, th.MuiTableCell-body{
   border-bottom: #202a35;
 }
 
+.MuiBottomNavigationAction-root {
+  color: white;
+}
+
 .fade-in {
-	opacity: 1;
-	animation-name: fadeInOpacity;
-	animation-iteration-count: 1;
-	animation-timing-function: ease-in;
-	animation-duration: 1s;
+  opacity: 1;
+  animation-name: fadeInOpacity;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in;
+  animation-duration: 1s;
 }
 
 @keyframes fadeInOpacity {
-	0% {
-		opacity: 0;
-	}
-	100% {
-		opacity: 1;
-	}
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
