--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,16 @@
 html {
   margin: auto;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
   background-color: rgba(25, 35, 46, 1);
 }
 
 body {
   margin: auto;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -17,11 +23,12 @@ code {
     monospace;
 }
 ::-webkit-scrollbar {
-  width: 3px;
+  position: fixed;
+  width: 0px;
 }
 
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 0 0px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(10px);
 }
 
