--- a/src/index.css
+++ b/src/index.css
@@ -1,28 +1,13 @@
-html {
-  height: 100%;
-  width: 100%;
+html, body {
+  overflow: hidden;
+  margin: 0;
 }
-
 body {
-  margin: auto;
-  height: 100%;
-  width: 100%;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  position: relative;
 }
 ::-webkit-scrollbar {
-  position: fixed;
-  width: 0px;
+  display: none;
 }
-
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 0px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(10px);
