--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@ html, body {
 }
 body {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  height: 100vh;
 }
 ::-webkit-scrollbar {
   display: none;
