--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,12 @@ html {
   margin: 0;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  height: 100%;
 }
 body {
+  height: 100%;
+
   margin: 0;
-  overflow: auto;
 }
 ::-webkit-scrollbar {
   display: none;
