--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,12 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   height: 100%;
+  width: 100%;
+
 }
 body {
   height: 100%;
-  margin: 0;
+  width: 0;
 }
 .react-swipeable-view-container {
   height: calc(var(--vh) - 154px);
